--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="icon" href="img/logo_360x.png">
 	<link rel="stylesheet" type="text/css" href=css/bootstrap.css>
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<script src="https://kit.fontawesome.com/354f6fe206.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -27,17 +28,6 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Catalog</a>
       </li>
-<!--       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          FAQ
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> -->
       <li class="nav-item">
         <a class="nav-link" href="#">FAQ</a>
       </li>
@@ -50,6 +40,67 @@
 </nav>
 
 </header>
+
+
+<div class="bannerContainer">
+	<div class="opacity"></div>
+	<h1 class="bannerLargeText">Canada's number 1 online mushroom dispensary</h1>
+	<div class="clickHere"><span>Click Here</span></div>
+</div>
+
+<div id="microDosing">
+	<div id="microDosingImg"></div>
+	<div>
+	<h1>Microdosing</h1>
+	<p>Microdosing Mushrooms has proven to help with mental health and increase attention and productivity.</p>
+	<div class="clickHere"><span>Click Here</span></div>
+	</div>
+</div>
+
+<div class="bannerContainer bannerContainer2">
+	<div class="opacity"></div>
+	<h1 class="bannerLargeText">Scooby Snacks</h1>
+	<p>These Psilocybin wellness caps are designed to be used in a comfortable and controlled setting when your responsibilities are out of the way. The premeasured dosage of the psilocybin wellness caps is considered a microdose without the intention of creating the associated hallucinations associated with psychedelics.</p>
+	<div class="clickHere"><span>Click Here</span></div>
+</div>
+
+<div class="testimonial">
+	<div>
+		<i class="fas fa-quote-left"></i>
+		<p>Really Enjoyed how subtle the microdosing effect was.</p>
+		<cite>-David Dreger</cite>
+	</div>
+	<div>
+		<i class="fas fa-quote-left"></i>
+		<p>The Albino Averys were exactly what i was looking for!</p>
+		<cite>-Jenna Henderson</cite>
+	</div>
+	<div>
+		<i class="fas fa-quote-left"></i>
+		<p>The Energy and Euphoria I get from these is exactly what i need to get through my day.</p>
+		<cite>-Anthony Witrock</cite>
+	</div>
+</div>
+
+<div id="fourImages">
+	<div id="fourImages1"></div>
+	<div id="fourImages2"></div>
+	<div id="fourImages3"></div>
+	<div id="fourImages4"></div>
+</div>
+
+
+<p>Please complete an E transfer payment to magicmushroomsdirect@gmail.com, for the total value of the order. Please use the security question, What's my name? , and use mmd123 as the answer to the security question. Orders will usually be processed within 2 business days, and you will receive an email with tracking information once it has been shipped. Please be sure to double check your shipping information, and that you have the correct Postal Code, and Unit number if there is one.
+
+We do not accept PayPal payments.
+
+If the name on the account that you have sent your E transfer from is not the same as the name on your order, please be sure to put your order number in the message of the E transfer so we can match the payment to the correct order.
+
+If you still have questions feel free to use the contact us page on our Website.
+
+You can expect a response within 24 hours Monday-Saturday.
+
+Thank You!</p>
 
 </body>
 <script src=js/jquery.js></script>
