--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="index.html"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,13 +23,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Catalog</a>
+        <a class="nav-link" href="catalog.html">Catalog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FAQ</a>
+        <a class="nav-link" href="faq.html">FAQ</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -89,8 +89,12 @@
 	<div id="fourImages4"></div>
 </div>
 
+<div class="delivery">
+	
+</div>
 
-<p>Please complete an E transfer payment to magicmushroomsdirect@gmail.com, for the total value of the order. Please use the security question, What's my name? , and use mmd123 as the answer to the security question. Orders will usually be processed within 2 business days, and you will receive an email with tracking information once it has been shipped. Please be sure to double check your shipping information, and that you have the correct Postal Code, and Unit number if there is one.
+
+<!-- <p>Please complete an E transfer payment to magicmushroomsdirect@gmail.com, for the total value of the order. Please use the security question, What's my name? , and use mmd123 as the answer to the security question. Orders will usually be processed within 2 business days, and you will receive an email with tracking information once it has been shipped. Please be sure to double check your shipping information, and that you have the correct Postal Code, and Unit number if there is one.
 
 We do not accept PayPal payments.
 
@@ -100,9 +104,20 @@ If you still have questions feel free to use the contact us page on our Website.
 
 You can expect a response within 24 hours Monday-Saturday.
 
-Thank You!</p>
+Thank You!</p> -->
 
 </body>
+
+<footer>
+	<div class="">
+      <input type="email" name="contact[email]" id="emailInput" class="emailInput" value="" placeholder="Email address" aria-label="Email address" aria-required="true" required="" autocorrect="off" autocapitalize="off">
+       <button type="submit" class="clickHere" name="commit">
+       <span style="font-weight: bold;" >SUBSCRIBE</span>
+       </button>
+    </div>
+</footer>
+
+
 <script src=js/jquery.js></script>
 <script src=js/bootstrap.js></script>
 <script src=js/script.js> </script>
